Code version corresponding to paper published at TOSEM